<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/heading"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_choose_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red_dark"
            android:text="@string/parivahan_karyalaya_ka_naam"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:paddingRight="10dp"
            android:drawableBottom="@drawable/down_arrow"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_rental_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:text="@string/kiraya_suchi_ki_jaankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_harvester_reg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="@string/harvestoer_panjiyan_ki_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_puc_checking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/puc_checking_ki_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_mobile_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:text="@string/mobile_ki_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_red_light_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/voilet"
                    android:text="@string/red_light_ki_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_drink_and_drive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/light_blue"
                    android:text="@string/sarabi_vahan_chalko_ki_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_replector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:text="@string/vahan_par_replactor"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_pollution"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/red_dark"
                    android:text="@string/pradushan_kendra"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_emergency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:background="@color/blue"
                    android:text="@string/aapatkaleen_vikas"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_without_fitness"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:background="@color/blue_text"
                    android:text="@string/bina_fitness"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_outstanding_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:text="@string/bakaya_vasuli_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_campaign_info"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/voilet"
                    android:text="@string/checking_abhiyan_ki_jankari"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>