<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="5dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:gravity="center"
        android:text="@string/sarabi_vahan_chalko_ki_jankari"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|start"
                  android:paddingLeft="10dp"
                android:text="@string/report_date"
                android:textColor="@color/light_blue" />

            <EditText
                android:id="@+id/edt_from_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:textColor="@color/light_blue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_date"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/calendar_icon_blue"
                android:src="@color/light_blue" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:text="@string/report_dinank_tak_chalko_ki_sankhya"
                android:textColor="@color/light_blue"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:gravity="center|start"
                android:paddingLeft="10dp"
                android:textColor="@color/light_blue"
                android:textSize="16sp" />
        </LinearLayout>


      

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/light_blue"
            android:gravity="center"
            android:padding="5dp"
            android:text="Submit"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>